--- a/index.html
+++ b/index.html
@@ -7,108 +7,86 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MULIMI/font-awesome/5.15.3/css/all.min.css" integrity="sha384-ezCs2ApVToJlAwCY/4ezMouGEx3MBeLs7be9TaT3TqY49aiKjF32N53C6XppaSN7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <style>
-        /* CSS for responsiveness */
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            align-items: center;
-        }
-        h1 {
-            margin: 0;
-            padding-left: 10px;
-        }
-        ul {
-            list-style-type: none;
+        /* Resetting default styles and setting up container */
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
             overflow: hidden;
+        }
+
+        /* Header styles */
+        header {
             background-color: #333;
-        }
-        li {
-            float: left;
-        }
-        li a {
-            display: block;
             color: white;
+            padding: 10px 0;
             text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
         }
-        li a:hover {
-            background-color: #111;
-        }
-        .dropdown {
-            float: left;
-            overflow: hidden;
-        }
-        .dropdown .dropbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
+        header h1 {
             margin: 0;
         }
-        .dropdown-content {
-            display: none;
-            position: absolute;
+
+        /* Navigation styles */
+        nav {
+            overflow: hidden;
             background-color: #333;
-            min-width: 160px;
-            z-index: 1;
         }
-        .dropdown-content a {
-            float: none;
+        nav a {
+            float: left;
+            display: block;
             color: white;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-        .dropdown-content a:hover {
-            background-color: #111;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-        .Home-display {
-            padding: 20px;
             text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
         }
-        /* Media queries for responsiveness */
-        @media only screen and (max-width: 600px) {
-            /* For mobile phones */
-            .container {
-                flex-direction: column;
-            }
-            h1 {
-                padding: 10px;
-            }
-            li {
-                float: none;
-            }
-            .dropdown {
-                float: none;
-            }
-            .dropdown-content {
-                position: relative;
-            }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        nav a.active {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        /* Content styles */
+        .content {
+            padding: 20px;
+        }
+
+        /* Footer styles */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <ul>
+
+    <header>
         <div class="container">
-            <a href="home.html"><img src="Pic1.png" alt="E-Fisp Registration Portal"></a>
             <h1>E-Fisp Registration Portal</h1>
         </div>
-        <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="#news"><i class="fas fa-info-circle"></i> About</a></li>
-        <li><a href="Login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-        <li> 
+    </header>
+
+    <nav>
+        <div class="container">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#login">Login</a>
             <div class="dropdown">
                 <button class="dropbtn">Sign in as</button>
                 <div class="dropdown-content">
@@ -116,8 +94,6 @@
                     <a href="Member.html">Member</a>
                 </div>
             </div>
-        </li>
-        <li>
             <div class="dropdown">
                 <button class="dropbtn">Language</button>
                 <div class="dropdown-content">
@@ -126,14 +102,22 @@
                     <a href="#">Link 3</a>
                 </div>
             </div>
-        </li>
-    </ul>
-    <div class="Home-display">
-        <br><br><br><br><br><br><br><br><br>
-        <h2>Be a farmer and save the nation</h2>
-        <p>E-Fisp under Ministry of Agriculture brings to you an Online Registration platform to interact within the comfort of your homes.</p> <br>
-        Gain income from agriculture <br><br>
-        ELECTRONIC-FARMERS <br> INPUT <br> SUPPORT PROGRAMME / E-FISP
+        </div>
+    </nav>
+
+    <div class="content">
+        <div class="container">
+            <h2>Be a farmer and save the nation</h2>
+            <p>E-Fisp under Ministry of Agriculture brings to you an Online Registration platform to interact within the comfort of your homes. Gain income from agriculture.</p>
+            <p>ELECTRONIC-FARMERS INPUT SUPPORT PROGRAMME / E-FISP</p>
+        </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 E-Fisp Registration Portal. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
